detail, review, index 완성(?) 회원가입-로그인 가능해지면 user_profile 업데이트 하는 것 만들겠음  +  구매했을 때 프로파일 업데이트 하는 것도 만들어야함ㅠㅠㅠ  =>  user api만 만들면 된다,,

--- a/flask-server/test.ipynb
+++ b/flask-server/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +99,15 @@
     "\n",
     "        return token_rank\n",
     "    \n",
+    "\n",
+    "    # 아이템 평균 점수\n",
+    "    def get_score(self, al_id):\n",
+    "        query = \"select al_id, score from reviews where al_id = \" + str(al_id)\n",
+    "        scores = self.cursor.execute(query).fetchall()\n",
+    "\n",
+    "        c = pd.DataFrame(data = scores, columns = ['al_id', 'scores'])\n",
+    "        return c.mean().scores\n",
+    "\n",
     "    \n",
     "    # 알콜 정보를 넘기자\n",
     "    def al_info(self):\n",
@@ -109,9 +118,10 @@
     "\n",
     "        columns_ = ['al_id', 'al_name', 'category', 'price', 'degree', 'img_link']\n",
     "        \n",
+    "        al_data = pd.DataFrame(data = result, columns = columns_, index=['al_data'])\n",
+    "        al_data['score'] = al_data.al_id.apply(self.get_score)\n",
     "        \n",
-    "        al_data = pd.DataFrame(data = result, columns = columns_, index=['al_data']).T.to_dict()\n",
-    "        return al_data\n",
+    "        return al_data.T.to_dict()\n",
     "    \n",
     "    \n",
     "    # 알콜 토큰 랭크와 정보 취합하기\n",
@@ -124,9 +134,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'al_data': {'al_id': 1224,\n",
+       "  'al_name': '허니문배',\n",
+       "  'category': '과실주',\n",
+       "  'price': 17900.0,\n",
+       "  'degree': 4.9,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FPBJf-1657699612618-honey.jpg&w=3840&q=75',\n",
+       "  'score': 4.7},\n",
+       " 'token_rank': ['가벼운',\n",
+       "  '가볍게',\n",
+       "  '구수한',\n",
+       "  '달달한',\n",
+       "  '달콤하면서도',\n",
+       "  '달콤함은',\n",
+       "  '복합적인',\n",
+       "  '사과',\n",
+       "  '사과를',\n",
+       "  '산뜻한',\n",
+       "  '산미와',\n",
+       "  '새콤한',\n",
+       "  '식전주로',\n",
+       "  '싱그러운',\n",
+       "  '안주와',\n",
+       "  '여운을',\n",
+       "  '은은한',\n",
+       "  '탄산이',\n",
+       "  '풍미',\n",
+       "  '풍미가',\n",
+       "  '풍부하게']}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = detail_info(1224)\n",
     "a.detail_page()"
@@ -155,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +225,7 @@
     "        df = pd.DataFrame(data = al_profile, columns = ['al_id', 'al_name', 'degree'] + token_list[:-1])\n",
     "        return df\n",
     "\n",
+    "\n",
     "    # 사용자 프로파일에서 특정 사용자 정보 df로 읽기\n",
     "    def c_user_profile(self):\n",
     "        query = \"select * from user_profile where u_id = \" + str(self.c_id)\n",
@@ -196,39 +245,39 @@
     "        # 사용자와 아이템들 간의 유사도를 내림차순으로 정렬하여 상위 15개의 인덱스 추출\n",
     "        top_15_idx = np.argsort(similarity[0])[::-1][:15]\n",
     "        # 상위 15개의 아이템 아이디\n",
-    "        tpo_15_ids = item_profile.loc[top_15_idx].al_id.to_list()\n",
+    "        top_15_ids = item_profile.loc[top_15_idx].al_id.to_list()\n",
     "\n",
-    "        return tpo_15_ids\n",
+    "        return top_15_ids\n",
     "\n",
     "\n",
+    "    # top15개의 아이템 데이터 반환\n",
     "    def get_top15(self):\n",
-    "        rankings = pd.read_csv('flask-server/db/db_csv_data/ranking_new.csv')\n",
-    "        rankings_t = rankings.reset_index().drop(columns='index').T\n",
-    "        rankings_t.reset_index(inplace=True)\n",
+    "        top15_ids = self.get_top15_id()\n",
     "\n",
-    "        rank_df = pd.DataFrame()\n",
-    "        # 1~15등 rank 칼럼 생성\n",
-    "        rank_df['rank'] = np.arange(1,16)\n",
-    "        # merge를 위해 인덱스 리셋\n",
-    "        rank_df.index = np.arange(1, 16)\n",
-    "        # 전통주 이름이 안맞아서 top 15를 뽑지 못하는 것 같음,, 이름을 맞춰야겠네\n",
-    "        rank_df['al_name'] = rankings_t[self.c_id][1:16]\n",
-    "        al_name_tuple = tuple(rank_df['al_name'].values.tolist())\n",
+    "        # 상위 순서대로 추출해야해서 for문 돌려야함\n",
+    "        result = dict()\n",
+    "        for idx, id in enumerate(top15_ids):\n",
+    "            detail_data = detail_info(alid=id)\n",
+    "            result[idx] = detail_data.detail_page()['al_data']\n",
     "\n",
-    "        # top15에 해당하는 알콜 이름으로 쿼리 날림\n",
-    "        query = \"select al_name, al_id, img_link, category, degree from item_info where al_name in \" +  str(al_name_tuple)\n",
-    "        al_token = self.cursor.execute(query).fetchall()\n",
-    "        al_df = pd.DataFrame(al_token, columns=['al_name', 'al_id', 'img_link', 'category', 'degree'])\n",
+    "        return result\n",
     "\n",
-    "        rank_df = pd.merge(rank_df, al_df, on='al_name', how='inner')\n",
-    "        # c_id는 필요없을 듯\n",
-    "        # rank_df['c_id'] = self.c_id\n",
     "\n",
-    "        return rank_df\n",
+    "    # c_id = -1일 때 베스트 아이템(리뷰 점수 높은거,,)\n",
+    "    def best_15(self):\n",
+    "        query = \"select al_id, score from reviews\"\n",
+    "        al_scores = self.cursor.execute(query).fetchall()\n",
+    "        al_scores_df = pd.DataFrame(al_scores, columns=['al_id', 'score'])\n",
+    "        best15_al_id = al_scores_df.pivot_table(index='al_id', values='score', aggfunc='mean').sort_values(by='score', ascending=False).reset_index()['al_id'][:15].to_list()\n",
+    "        \n",
+    "        # 상위 순서대로 추출해야해서 for문 돌려야함\n",
+    "        result = dict()\n",
+    "        for idx, id in enumerate(best15_al_id):\n",
+    "            detail_data = detail_info(alid=id)\n",
+    "            result[idx] = detail_data.detail_page()['al_data']\n",
     "\n",
-    "    def get_top15_json(self):\n",
-    "        rank_df = self.get_top15()\n",
-    "        return rank_df.T.to_json(force_ascii=False)\n",
+    "        return result\n",
+    "\n",
     "\n",
     "    def get_all_alcohols_df(self):\n",
     "        query = \"select al_name, al_id, img_link, category, degree from item_info\"\n",
@@ -255,37 +304,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1216,\n",
-       " 1158,\n",
-       " 1223,\n",
-       " 1198,\n",
-       " 1225,\n",
-       " 1109,\n",
-       " 1112,\n",
-       " 1170,\n",
-       " 276,\n",
-       " 1085,\n",
-       " 1113,\n",
-       " 1167,\n",
-       " 1110,\n",
-       " 1054,\n",
-       " 1128]"
+       "{0: {'al_id': 312,\n",
+       "  'al_name': '토박이 소곡화주',\n",
+       "  'category': '증류식소주',\n",
+       "  'price': 30000.0,\n",
+       "  'degree': 41.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FVxM2-1621006714638-%25EC%2586%258C%25EA%25B3%25A1%25ED%2599%2594%25EC%25A3%25BC.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 1: {'al_id': 1129,\n",
+       "  'al_name': '양조학당 애',\n",
+       "  'category': '증류식소주',\n",
+       "  'price': 30000.0,\n",
+       "  'degree': 45.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F5Y2J-1637224490543-%25EC%2596%2591%25EC%25A1%25B0%25ED%2595%2599%25EB%258B%25B9%2520%25EC%2595%25A0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 2: {'al_id': 123,\n",
+       "  'al_name': '세인트하우스 아로니아 와인',\n",
+       "  'category': '과실주',\n",
+       "  'price': 23000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FrlT8-1659320861396-0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 3: {'al_id': 1128,\n",
+       "  'al_name': '모월 로 25%',\n",
+       "  'category': '증류식소주',\n",
+       "  'price': 30000.0,\n",
+       "  'degree': 25.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fcd7C-1637224397424-%25EB%25AA%25A8%25EC%259B%2594_%25EB%25A1%259C-2.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 4: {'al_id': 111,\n",
+       "  'al_name': '술아 순곡주',\n",
+       "  'category': '약주',\n",
+       "  'price': 21000.0,\n",
+       "  'degree': 20.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F3zHB-1659320574703-0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 5: {'al_id': 1139,\n",
+       "  'al_name': '기다림 백미 약주',\n",
+       "  'category': '약주',\n",
+       "  'price': 19000.0,\n",
+       "  'degree': 10.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fa6DD-1638232328653-%25EA%25B8%25B0%25EB%258B%25A4%25EB%25A6%25BC%2520%25EB%25B0%25B1%25EB%25AF%25B8%2520%25EB%25A7%2591%25EC%259D%2580%25EC%2588%25A0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 6: {'al_id': 103,\n",
+       "  'al_name': '술아 매화주',\n",
+       "  'category': '약주',\n",
+       "  'price': 20000.0,\n",
+       "  'degree': 15.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FD1LH-1659320729162-0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 7: {'al_id': 1140,\n",
+       "  'al_name': '기다림 흑미 약주',\n",
+       "  'category': '약주',\n",
+       "  'price': 19000.0,\n",
+       "  'degree': 10.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FFCSu-1638231485488-%25EA%25B8%25B0%25EB%258B%25A4%25EB%25A6%25BC%2520%25ED%259D%2591%25EB%25AF%25B8%2520%25EB%25A7%2591%25EC%259D%2580%25EC%2588%25A0-2.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 8: {'al_id': 1157,\n",
+       "  'al_name': '모든날에',\n",
+       "  'category': '약주',\n",
+       "  'price': 28000.0,\n",
+       "  'degree': 15.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FUvut-1639124391341-%25EB%25AA%25A8%25EB%2593%25A0%25EB%2582%25A0%25EC%2597%2590.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 9: {'al_id': 142,\n",
+       "  'al_name': '문희 오미자 가향주',\n",
+       "  'category': '탁주',\n",
+       "  'price': 24000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F6dGy-1630317869603-mh%2520omj0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 10: {'al_id': 1123,\n",
+       "  'al_name': '초선의 꿈 로제와인',\n",
+       "  'category': '과실주',\n",
+       "  'price': 20000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fnunu-1635905019728-%25EC%25B4%2588%25EC%2584%25A0%25EC%259D%2598%2520%25EA%25BF%2588%2520%25EB%25A1%259C%25EC%25A0%259C%2520%25EC%258A%25A4%25EC%259C%2584%25ED%258A%25B8_%25EC%259E%25AC%25EC%25B4%25AC%25EC%2598%2581.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 11: {'al_id': 1165,\n",
+       "  'al_name': '여유 40%',\n",
+       "  'category': '증류식소주',\n",
+       "  'price': 25800.0,\n",
+       "  'degree': 40.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FrNEn-1639643729412-yy0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 12: {'al_id': 1122,\n",
+       "  'al_name': '모월 인 41%',\n",
+       "  'category': '증류식소주',\n",
+       "  'price': 50000.0,\n",
+       "  'degree': 41.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F8KYH-1635732656710-%25EB%25AA%25A8%25EC%259B%2594_%25EC%259D%25B8-4.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 13: {'al_id': 1177,\n",
+       "  'al_name': '운암 1945',\n",
+       "  'category': '약주',\n",
+       "  'price': 28000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F36NE-1642382956497-ua1945%25200.jpg&w=3840&q=75',\n",
+       "  'score': 5.0},\n",
+       " 14: {'al_id': 1119,\n",
+       "  'al_name': '여포의 꿈 화이트와인',\n",
+       "  'category': '과실주',\n",
+       "  'price': 25000.0,\n",
+       "  'degree': 12.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F2iNg-1635732953983-ypg0.jpg&w=3840&q=75',\n",
+       "  'score': 5.0}}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = item_list(3)\n",
-    "a.get_top15_id()"
+    "a.best_15()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top15 = [1216,  1158, 1223, 1198, 1225, 1109, 1112, 1170, 276, 1085, 1113, 1167, 1110, 1054, 1128]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class reviews:\n",
+    "    def __init__(self, al_id):\n",
+    "        # self.conn = sqlite3.connect('flask-server/db/alryeoju.db')\n",
+    "        self.conn = sqlite3.connect('./db/alryeoju.db')\n",
+    "        self.cursor = self.conn.cursor()\n",
+    "        self.al_id = al_id\n",
+    "    \n",
+    "    def get_reviews(self):\n",
+    "        query = \"select u_name, al_name, review, score, datetime from reviews where al_id=\" + str(self.al_id)\n",
+    "        reviews_lst = self.cursor.execute(query).fetchall()\n",
+    "\n",
+    "        reviews_df = pd.DataFrame(data = reviews_lst, columns=['u_name', 'al_name', 'review', 'score', 'datetime']).sort_values(by='datetime', ascending=False)\n",
+    "        \n",
+    "        return reviews_df.T.to_dict()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: {'u_name': 'JKLEE',\n",
+       "  'al_name': '허니문배',\n",
+       "  'review': '처음 맛은 달지만 뒷맛이 생각보다 깔끔하지는 않습니다.',\n",
+       "  'score': 4.0,\n",
+       "  'datetime': '2022.08.09'},\n",
+       " 3: {'u_name': '리갱',\n",
+       "  'al_name': '허니문배',\n",
+       "  'review': '',\n",
+       "  'score': 5.0,\n",
+       "  'datetime': '2022.08.04'},\n",
+       " 1: {'u_name': '유*민',\n",
+       "  'al_name': '허니문배',\n",
+       "  'review': '따자마자 배 향이 나서 너무 좋았고 가볍게 한 잔하기 너무 좋았습니다!',\n",
+       "  'score': 4.5,\n",
+       "  'datetime': '2022.06.27'},\n",
+       " 4: {'u_name': '지니지니야',\n",
+       "  'al_name': '허니문배',\n",
+       "  'review': '맛있어요~^^',\n",
+       "  'score': 5.0,\n",
+       "  'datetime': '2022.06.27'},\n",
+       " 0: {'u_name': '거북이마을',\n",
+       "  'al_name': '허니문배',\n",
+       "  'review': '',\n",
+       "  'score': 5.0,\n",
+       "  'datetime': '2022.05.27'}}"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = reviews(1224)\n",
+    "a.get_reviews()"
    ]
   },
   {
