--- a/flask-server/test.ipynb
+++ b/flask-server/test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,9 @@
     "class detail_info:\n",
     "    def __init__(self, alid, cid = -1):\n",
     "        #Mac용\n",
-    "        # self.conn = sqlite3.connect('./db/alryeoju.db')\n",
-    "        # window  :  mac도 가능한가 확인 좀,,\n",
     "        self.conn = sqlite3.connect('./db/alryeoju.db')\n",
+    "        # window  :  mac도 가능한가 확인 좀,,\n",
+    "        # self.conn = sqlite3.connect('flask-server/db/alryeoju.db')\n",
     "        self.cursor = self.conn.cursor()\n",
     "        self.c_id = cid\n",
     "        self.al_id = alid\n",
@@ -106,11 +106,14 @@
     "        scores = self.cursor.execute(query).fetchall()\n",
     "\n",
     "        c = pd.DataFrame(data = scores, columns = ['al_id', 'scores'])\n",
-    "        return c.mean().scores\n",
+    "        if c.empty:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            return c.mean().scores\n",
     "\n",
     "    \n",
     "    # 알콜 정보를 넘기자\n",
-    "    def al_info(self):\n",
+    "    def al_info_df(self):\n",
     "        query = \"\"\"select al_id, al_name, category, price, degree, img_link\n",
     "                from item_info where al_id = ?\"\"\"\n",
     "        data = (self.al_id,)\n",
@@ -119,17 +122,28 @@
     "        columns_ = ['al_id', 'al_name', 'category', 'price', 'degree', 'img_link']\n",
     "        \n",
     "        al_data = pd.DataFrame(data = result, columns = columns_, index=['al_data'])\n",
+    "        return al_data \n",
+    "\n",
+    "\n",
     "        al_data['score'] = al_data.al_id.apply(self.get_score)\n",
     "        \n",
     "        return al_data.T.to_dict()\n",
     "    \n",
     "    \n",
     "    # 알콜 토큰 랭크와 정보 취합하기\n",
-    "    def detail_page(self):\n",
+    "    def detail_page(self, page):        \n",
+    "        # page == 2  :  /recomm => top15함수들에서 호출  =>  score 계산 안함\n",
     "        token_rank = self.get_token_rank()\n",
-    "        al_data = self.al_info()\n",
-    "        al_data['token_rank'] = token_rank\n",
-    "        return al_data\n"
+    "        al_data = self.al_info_df()\n",
+    "\n",
+    "        # page == 1  :  /detail에서 호출\n",
+    "        if page == 1:\n",
+    "            al_data['score'] = al_data.al_id.apply(self.get_score)\n",
+    "            al_data = al_data.T.to_dict()\n",
+    "            al_data['token_rank'] = token_rank\n",
+    "            return al_data\n",
+    "        if page == 2:\n",
+    "            return al_data.T.to_dict()"
    ]
   },
   {
@@ -203,16 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class item_list:\n",
     "    def __init__(self, cid = -1):\n",
-    "        # MAC용\n",
-    "        # self.conn = sqlite3.connect('./db/alryeoju.db')\n",
-    "        # Window용\n",
     "        self.conn = sqlite3.connect('./db/alryeoju.db')\n",
+    "        # self.conn = sqlite3.connect('flask-server/db/alryeoju.db')\n",
     "        self.cursor = self.conn.cursor()\n",
     "        self.c_id = cid\n",
     "    \n",
@@ -226,6 +238,15 @@
     "        return df\n",
     "\n",
     "\n",
+    "    # 아이템 단일 행 읽기\n",
+    "    def an_item_profile_df(self, al_id):\n",
+    "        query = \"select * from item_profile where al_id = \" + str(al_id)\n",
+    "        al_row = self.cursor.execute(query).fetchall()\n",
+    "\n",
+    "        df = pd.DataFrame(data = al_row, columns = ['al_id', 'al_name', 'degree'] + token_list[:-1])\n",
+    "        return df\n",
+    "\n",
+    "\n",
     "    # 사용자 프로파일에서 특정 사용자 정보 df로 읽기\n",
     "    def c_user_profile(self):\n",
     "        query = \"select * from user_profile where u_id = \" + str(self.c_id)\n",
@@ -233,6 +254,33 @@
     "\n",
     "        df = pd.DataFrame(data = user, columns=['u_id', 'u_name'] + token_list)\n",
     "        return df\n",
+    "\n",
+    "\n",
+    "    # 비슷한 술 6개의 아이디\n",
+    "    def sim_items_6_id(self, al_id):\n",
+    "        al_row= self.an_item_profile_df(al_id)[token_list]\n",
+    "        item_profile = self.item_profile_df()\n",
+    "        item_matrix = item_profile[token_list]\n",
+    "\n",
+    "        similarity = cosine_similarity(al_row, item_matrix) \n",
+    "        # 사용자와 아이템들 간의 유사도를 내림차순으로 정렬하여 상위 15개의 인덱스 추출\n",
+    "        top_15_idx = np.argsort(similarity[0])[::-1][:6]\n",
+    "        # 상위 15개의 아이템 아이디\n",
+    "        top_15_ids = item_profile.loc[top_15_idx].al_id.to_list()\n",
+    "\n",
+    "        return top_15_ids\n",
+    "\n",
+    "    # 비슷한 술 6개 아이템 데이터 반환\n",
+    "    def get_sim_6(self, al_id):\n",
+    "        sim6_ids = self.sim_items_6_id(al_id)\n",
+    "\n",
+    "        # 상위 순서대로 추출해야해서 for문 돌려야함\n",
+    "        result = dict()\n",
+    "        for idx, id in enumerate(sim6_ids):\n",
+    "            detail_data = detail_info(alid=id)\n",
+    "            result[idx] = detail_data.detail_page(page=2)['al_data']\n",
+    "\n",
+    "        return result\n",
     "\n",
     "\n",
     "    # 상위 15개의 아이템 아이디 반환\n",
@@ -258,7 +306,7 @@
     "        result = dict()\n",
     "        for idx, id in enumerate(top15_ids):\n",
     "            detail_data = detail_info(alid=id)\n",
-    "            result[idx] = detail_data.detail_page()['al_data']\n",
+    "            result[idx] = detail_data.detail_page(page=2)['al_data']\n",
     "\n",
     "        return result\n",
     "\n",
@@ -274,22 +322,22 @@
     "        result = dict()\n",
     "        for idx, id in enumerate(best15_al_id):\n",
     "            detail_data = detail_info(alid=id)\n",
-    "            result[idx] = detail_data.detail_page()['al_data']\n",
+    "            result[idx] = detail_data.detail_page(page=2)['al_data']\n",
     "\n",
     "        return result\n",
     "\n",
     "\n",
     "    def get_all_alcohols_df(self):\n",
-    "        query = \"select al_name, al_id, img_link, category, degree from item_info\"\n",
+    "        query = \"select al_id, al_name, category, price, degree, img_link from item_info\"\n",
     "        al_token = self.cursor.execute(query).fetchall()\n",
-    "        al_df = pd.DataFrame(al_token, columns=['al_name', 'al_id', 'img_link', 'category', 'degree'])        \n",
+    "        al_df = pd.DataFrame(al_token, columns=['al_id', 'al_name', 'category', 'price', 'degree', 'img_link'])        \n",
     "        al_df = al_df.sample(frac=1)\n",
     "        return al_df\n",
     "\n",
     "    def get_alcohols_df_by_category(self, category):\n",
-    "        query = \"select al_name, al_id, img_link, category, degree from item_info where category = '\" + category + \"'\"\n",
+    "        query = \"select al_id, al_name, category, price, degree, img_link from item_info where category = '\" + category + \"'\"\n",
     "        al_token = self.cursor.execute(query).fetchall()\n",
-    "        al_df = pd.DataFrame(al_token, columns=['al_name', 'al_id', 'img_link', 'category', 'degree'])        \n",
+    "        al_df = pd.DataFrame(al_token, columns=['al_id', 'al_name', 'category', 'price', 'degree', 'img_link'])        \n",
     "        al_df = al_df.sample(frac=1)\n",
     "        return al_df\n",
     "    \n",
@@ -299,137 +347,69 @@
     "            al_df = self.get_all_alcohols_df()\n",
     "        else:\n",
     "            al_df = self.get_alcohols_df_by_category(category)\n",
-    "        return al_df.T.to_json(force_ascii=False)"
+    "        return al_df.T.to_json(force_ascii=False)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: {'al_id': 312,\n",
-       "  'al_name': '토박이 소곡화주',\n",
-       "  'category': '증류식소주',\n",
-       "  'price': 30000.0,\n",
-       "  'degree': 41.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FVxM2-1621006714638-%25EC%2586%258C%25EA%25B3%25A1%25ED%2599%2594%25EC%25A3%25BC.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 1: {'al_id': 1129,\n",
-       "  'al_name': '양조학당 애',\n",
-       "  'category': '증류식소주',\n",
-       "  'price': 30000.0,\n",
-       "  'degree': 45.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F5Y2J-1637224490543-%25EC%2596%2591%25EC%25A1%25B0%25ED%2595%2599%25EB%258B%25B9%2520%25EC%2595%25A0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 2: {'al_id': 123,\n",
-       "  'al_name': '세인트하우스 아로니아 와인',\n",
+       "{0: {'al_id': 1224,\n",
+       "  'al_name': '허니문배',\n",
        "  'category': '과실주',\n",
-       "  'price': 23000.0,\n",
-       "  'degree': 12.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FrlT8-1659320861396-0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 3: {'al_id': 1128,\n",
-       "  'al_name': '모월 로 25%',\n",
+       "  'price': 17900.0,\n",
+       "  'degree': 4.9,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FPBJf-1657699612618-honey.jpg&w=3840&q=75'},\n",
+       " 1: {'al_id': 286,\n",
+       "  'al_name': '김포 특주',\n",
+       "  'category': '약주',\n",
+       "  'price': 47000.0,\n",
+       "  'degree': 15.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FdCC0-1657597631019-00.jpg&w=3840&q=75'},\n",
+       " 2: {'al_id': 1227,\n",
+       "  'al_name': '나주 배 약주',\n",
+       "  'category': '약주',\n",
+       "  'price': 20000.0,\n",
+       "  'degree': 15.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FH34x-1650013763688-1.jpg&w=3840&q=75'},\n",
+       " 3: {'al_id': 1166,\n",
+       "  'al_name': '한주 25%',\n",
        "  'category': '증류식소주',\n",
-       "  'price': 30000.0,\n",
+       "  'price': 9900.0,\n",
        "  'degree': 25.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fcd7C-1637224397424-%25EB%25AA%25A8%25EC%259B%2594_%25EB%25A1%259C-2.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 4: {'al_id': 111,\n",
-       "  'al_name': '술아 순곡주',\n",
-       "  'category': '약주',\n",
-       "  'price': 21000.0,\n",
-       "  'degree': 20.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F3zHB-1659320574703-0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 5: {'al_id': 1139,\n",
-       "  'al_name': '기다림 백미 약주',\n",
-       "  'category': '약주',\n",
-       "  'price': 19000.0,\n",
-       "  'degree': 10.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fa6DD-1638232328653-%25EA%25B8%25B0%25EB%258B%25A4%25EB%25A6%25BC%2520%25EB%25B0%25B1%25EB%25AF%25B8%2520%25EB%25A7%2591%25EC%259D%2580%25EC%2588%25A0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 6: {'al_id': 103,\n",
-       "  'al_name': '술아 매화주',\n",
-       "  'category': '약주',\n",
-       "  'price': 20000.0,\n",
-       "  'degree': 15.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FD1LH-1659320729162-0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 7: {'al_id': 1140,\n",
-       "  'al_name': '기다림 흑미 약주',\n",
-       "  'category': '약주',\n",
-       "  'price': 19000.0,\n",
-       "  'degree': 10.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FFCSu-1638231485488-%25EA%25B8%25B0%25EB%258B%25A4%25EB%25A6%25BC%2520%25ED%259D%2591%25EB%25AF%25B8%2520%25EB%25A7%2591%25EC%259D%2580%25EC%2588%25A0-2.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 8: {'al_id': 1157,\n",
-       "  'al_name': '모든날에',\n",
-       "  'category': '약주',\n",
-       "  'price': 28000.0,\n",
-       "  'degree': 15.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FUvut-1639124391341-%25EB%25AA%25A8%25EB%2593%25A0%25EB%2582%25A0%25EC%2597%2590.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 9: {'al_id': 142,\n",
-       "  'al_name': '문희 오미자 가향주',\n",
-       "  'category': '탁주',\n",
-       "  'price': 24000.0,\n",
-       "  'degree': 12.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F6dGy-1630317869603-mh%2520omj0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 10: {'al_id': 1123,\n",
-       "  'al_name': '초선의 꿈 로제와인',\n",
-       "  'category': '과실주',\n",
-       "  'price': 20000.0,\n",
-       "  'degree': 12.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2Fnunu-1635905019728-%25EC%25B4%2588%25EC%2584%25A0%25EC%259D%2598%2520%25EA%25BF%2588%2520%25EB%25A1%259C%25EC%25A0%259C%2520%25EC%258A%25A4%25EC%259C%2584%25ED%258A%25B8_%25EC%259E%25AC%25EC%25B4%25AC%25EC%2598%2581.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 11: {'al_id': 1165,\n",
-       "  'al_name': '여유 40%',\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FqnDa-1639644710037-hj0.jpg&w=3840&q=75'},\n",
+       " 4: {'al_id': 254,\n",
+       "  'al_name': '꿀샘16',\n",
        "  'category': '증류식소주',\n",
-       "  'price': 25800.0,\n",
-       "  'degree': 40.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FrNEn-1639643729412-yy0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 12: {'al_id': 1122,\n",
-       "  'al_name': '모월 인 41%',\n",
+       "  'price': 15000.0,\n",
+       "  'degree': 16.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FYzps-1653552795046-SAM_THUMB1.jpg&w=3840&q=75'},\n",
+       " 5: {'al_id': 81,\n",
+       "  'al_name': '추사 40%',\n",
        "  'category': '증류식소주',\n",
-       "  'price': 50000.0,\n",
-       "  'degree': 41.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F8KYH-1635732656710-%25EB%25AA%25A8%25EC%259B%2594_%25EC%259D%25B8-4.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 13: {'al_id': 1177,\n",
-       "  'al_name': '운암 1945',\n",
-       "  'category': '약주',\n",
-       "  'price': 28000.0,\n",
-       "  'degree': 12.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F36NE-1642382956497-ua1945%25200.jpg&w=3840&q=75',\n",
-       "  'score': 5.0},\n",
-       " 14: {'al_id': 1119,\n",
-       "  'al_name': '여포의 꿈 화이트와인',\n",
-       "  'category': '과실주',\n",
        "  'price': 25000.0,\n",
-       "  'degree': 12.0,\n",
-       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2F2iNg-1635732953983-ypg0.jpg&w=3840&q=75',\n",
-       "  'score': 5.0}}"
+       "  'degree': 40.0,\n",
+       "  'img_link': 'https://www.sooldamhwa.com/_next/image?url=https%3A%2F%2Fd38cxpfv0ljg7q.cloudfront.net%2Fadmin_contents%2Fthumbnail%2FPmvo-1654844288132-THUMB.jpg&w=3840&q=75'}}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = item_list(3)\n",
-    "a.best_15()"
+    "a.get_sim_6(1224)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +514,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -548,12 +528,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "17d64356d8de79b5842e065b25b51719170ca31eef171827c5642a6aa38d2332"
+    "hash": "5e41fa78e420061c3cb3bc62cf0dcec1f8919f832b4938c3b1160d32173604ce"
    }
   }
  },
