--- a/flask-server/test.ipynb
+++ b/flask-server/test.ipynb
@@ -824,6 +824,183 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 밑의 함수에서,, apply때 쓸려고 평균내기 함수 만듦,,\n",
+    "def mean(x, cnt):\n",
+    "    if x[0] == 0:\n",
+    "        return x[1]\n",
+    "    elif x[1] == 0:\n",
+    "        return x[0]\n",
+    "    else:\n",
+    "        return (x[0]*(cnt-1) + x[1])/cnt\n",
+    "\n",
+    "class buy:\n",
+    "    def __init__(self, c_id):\n",
+    "        self.c_id = c_id\n",
+    "        self.now = datetime.now()\n",
+    "\n",
+    "        self.conn = sqlite3.connect('./db/alryeoju.db')\n",
+    "        # self.conn = sqlite3.connect('flask-server/db/alryeoju.db')\n",
+    "        self.cursor = self.conn.cursor()\n",
+    "\n",
+    "\n",
+    "    # 사용자 - 아이템 별 리뷰 남길 수 있는지 확인\n",
+    "    # 16번 사람은 133번을 두 번 마심,,\n",
+    "    def review_able(self, time):\n",
+    "        time = datetime.strptime(time, \"%Y.%m.%d\")\n",
+    "        print(time)\n",
+    "        if ((self.now - time).days < 15):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "    # mypage에서 사용\n",
+    "    # 사용자 별 구매한 아이템 나열  :  Dataframe 반환  :  json으로 변환해야함\n",
+    "    def purchase_items(self):\n",
+    "        query = \"select b.u_id, i.al_id, i.al_name, b.datetime from buy_info b, item_info i where b.al_id = i.al_id and b.u_id = \" + str(self.c_id)\n",
+    "        result = pd.DataFrame(self.cursor.execute(query).fetchall(), columns = ['c_id', 'al_id', 'al_name', 'date'])\n",
+    "\n",
+    "        # 1이면 리뷰 쓰라는 버튼 나오고, 0이면 안나옴\n",
+    "        result['review_O'] = result['date'].apply(self.review_able)\n",
+    "        return result.T.to_json(force_ascii=False)\n",
+    "\n",
+    "\n",
+    "    # detail에서 사용  :  구매한지 15일 미만이면 리뷰 버튼 생성\n",
+    "    # 버튼 생성해야하면 1, 아니면 0 반환\n",
+    "    def review_button(self, al_id):\n",
+    "        query = '''select b.u_id, i.al_id, i.al_name, b.datetime \n",
+    "                from buy_info b, item_info i \n",
+    "                where b.al_id = i.al_id and b.u_id =''' + str(self.c_id) + ' and i.al_id= ' + str(al_id) + ' order by datetime desc'\n",
+    "        result = self.cursor.execute(query).fetchone()\n",
+    "        time = datetime.strptime(result[3], \"%Y.%m.%d\")\n",
+    "\n",
+    "        if (self.now - time).days < 15:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "\n",
+    "    # 리뷰 작성 버튼 누르고, 별점 눌렀을 때 리뷰 점수 저장됨\n",
+    "    # 리뷰 점수(<=5) 필요함\n",
+    "    # 저장되면 return 1 else return 0\n",
+    "    def write_review(self, c_name, al_id, al_name, review, score):\n",
+    "        date = str(self.now.year) + '.' + str(self.now.month) + '.' + str(self.now.day) \n",
+    "        query = \"insert into reviews values(?, ?, ?, ?, ?, ?, ?)\"\n",
+    "        data = (self.c_id, c_name, al_id, al_name, review, score, date)\n",
+    "        try:\n",
+    "            self.cursor.execute(query, data)\n",
+    "            self.conn.commit()\n",
+    "            return 1\n",
+    "        except:\n",
+    "            return 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 리뷰 작성시 user_profile 업데이트 하기\n",
+    "    def user_profile_update(self, al_id):\n",
+    "        query = \"select p.*, u.cnt from user_profile p, users u where p.u_id = u.u_id and u.u_id = \" + str(self.c_id)\n",
+    "        user_row = self.cursor.execute(query).fetchall()\n",
+    "        user_row = pd.DataFrame(data = user_row, columns=['u_id', 'u_name'] + token_list + ['cnt'])\n",
+    "        # 총 구매 개수\n",
+    "        cnt = user_row.loc[0, 'cnt'] + 1\n",
+    "        user_p = user_row[token_list].T\n",
+    "        \n",
+    "        query = \"select * from item_profile where al_id = \" + str(al_id)\n",
+    "        al_row = self.cursor.execute(query).fetchall()\n",
+    "        al_row = pd.DataFrame(data = al_row, columns = ['al_id', 'al_name', 'degree'] + token_list[:-1])\n",
+    "        al_p = al_row[token_list].T\n",
+    "        \n",
+    "        \n",
+    "        # 사용자 토큰과 아이템 토큰 반영\n",
+    "        a = pd.DataFrame(user_p).rename(columns={0:'df1'})\n",
+    "        a['df2'] = al_p\n",
+    "        # 과거 데이터의 비중 : 80%, 현재 아이템의 비중 : 20%\n",
+    "        a['result'] = a.apply(mean, args=(5, ), axis=1)\n",
+    "        result = a.T.loc[['result']]\n",
+    "        result['u_id'] = user_row.loc[0, 'u_id']\n",
+    "        result['u_name'] = user_row.loc[0, 'u_name']\n",
+    "        result['cnt'] = cnt\n",
+    "        result = result[['u_id', 'u_name'] + token_list]\n",
+    "\n",
+    "        # 행 삭제 후 재 삽입\n",
+    "        query = \"delete from user_profile where u_id = \" + str(self.c_id)\n",
+    "        query02 =  'insert into user_profile (u_id , u_name ,가득한 ,가벼운 ,가볍게 ,가볍고 ,간단한 ,간장 ,감압식 ,감압식_증류 ,감칠맛 ,감칠맛을 ,감칠맛이 ,강렬한 ,강하게 ,강하지 ,강한 ,거친 ,고구마 ,고구마의 ,고기 ,고소 ,고소하고 ,고소한 ,고소함과 ,고운달 ,곡물 ,곡물의 ,과실 ,과실의 ,과일 ,구수하면서도 ,구수한 ,국물 ,궁합을 ,궁합이 ,기름진 ,기름진_깔끔하게 ,기분 ,깊은 ,깊은_풍미를 ,깔끔하게 ,깔끔하고 ,깔끔한 ,냉장 ,냉장고에 ,냉장고에서 ,높고 ,높은 ,높은_도수를 ,높은_도수와 ,누룩 ,누룩으로 ,누룩을 ,누룩의 ,느끼한 ,느끼함을 ,다양한 ,다채로운 ,단맛 ,단맛과 ,단맛과_산미가 ,단맛으로 ,단맛은 ,단맛을 ,단맛이 ,달달한 ,달지 ,달짝지근한 ,달콤 ,달콤하게 ,달콤하고,달콤하면서도 ,달콤한 ,달콤함 ,달콤함과 ,달콤함은 ,달콤함이 ,담백하고 ,담백한 ,도수가 ,도수를 ,도수에 ,도수와 ,독특한 ,독특한_풍미를 ,동백꽃 ,드라이한 ,디저트류와 ,디저트와 ,딸기 ,떫은 ,레드 ,레몬 ,로제 ,막걸리 ,막걸리는 ,막걸리를 ,막걸리의 ,맑고 ,맑은 ,매실 ,매실의 ,매운 ,매운맛을 ,매콤한 ,매콤한_양념이 ,무화과 ,묵직한 ,물과 ,물을 ,물처럼 ,바나나 ,바디감과 ,바디감을 ,바디감이,발효 ,발효를 ,발효시켜 ,발효와 ,발효와_숙성을 ,발효한 ,배가 ,베리류의 ,복분자의 ,복숭아 ,복합적으로 ,복합적인 ,부드러운 ,부드러운_단맛 ,부드럽게 ,부드럽고 ,부드럽고_깔끔한 ,붉은 ,사과 ,사과로 ,사과를 ,사과의 ,사이다 ,산뜻하게 ,산뜻한 ,산미 ,산미가 ,산미는 ,산미를 ,산미와 ,상온에 ,상온에서 ,상쾌한 ,상큼한 ,새콤달콤한 ,새콤달콤함이 ,새콤한 ,생선회 ,소주 ,소주는 ,소주를 ,소주와 ,소주의 ,수제 ,숙성 ,숙성을 ,숙성한 ,스위트 ,스트레이트로 ,스파클링 ,시원하게 ,시원한 ,시트러스 ,식욕을 ,식전주로 ,신맛이 ,신선한 ,싱그러운 ,싱그럽게 ,쌀과 ,쌀로 ,쌀을 ,쌀의 ,쏘는 ,씁쓸한 ,씁쓸함이 ,아니라 ,안주 ,안주류와 ,안주와 ,알싸한 ,알코올 ,압력을 ,압력을_증류하는 ,애플 ,약주 ,약주입니다 ,양념 ,양념된 ,양념이 ,양념이_강한 ,얼음 ,얼음을 ,여운을 ,여운이 ,오미자 ,오미자를 ,오미자의 ,오크 ,오크통 ,온더락으로 ,온도가 ,온도에 ,온도에서 ,올라오는데요 ,와인 ,와인은 ,와인을 ,와인의 ,와인이에요 ,와인인데요 ,와인입니다 ,원액을 ,원주를 ,유기농 ,육류 ,육류나 ,육류와 ,은은하게 ,은은한 ,은은한_단맛과 ,음식보단 ,자극하는 ,자두 ,자연 ,작열감 ,작열감과 ,작열감도 ,작열감을 ,작열감이 ,저온 ,저온_숙성을 ,저온에서 ,적은 ,적절한 ,전통주 ,조화로운 ,주스 ,주스처럼 ,중후한 ,증류 ,증류를 ,증류식 ,증류주 ,증류주를 ,증류하는 ,증류하는_감압식 ,증류하여 ,증류한 ,진득한 ,진한 ,질감을 ,집에서 ,짙은 ,짭조름한 ,짭짤한 ,차가운 ,차갑게 ,찹쌀과 ,첨가물 ,청량감 ,청포도 ,치즈 ,친구들과 ,크라테 ,탁주 ,탁주는 ,탁주의 ,탄산 ,탄산과 ,탄산이 ,텁텁한 ,투명한 ,튀는 ,특별한 ,특유의 ,특징이 ,편안하게 ,포도 ,포도로 ,포도를 ,포도의 ,풍미 ,풍미_짙은,풍미가 ,풍미가_짙은 ,풍미까지 ,풍미는 ,풍미를 ,풍미와 ,풍부하게 ,풍부한 ,해산물 ,향긋한 ,화이트 ,효모를 ,degree) values (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)'\n",
+    "        data02 = tuple(result.values[0])\n",
+    "\n",
+    "        try:\n",
+    "            self.cursor.execute(query)\n",
+    "            self.cursor.execute(query02, data02)\n",
+    "            self.conn.commit()\n",
+    "            return 1\n",
+    "        except:\n",
+    "            return 0\n",
+    "\n",
+    "\n",
+    "    # 구매 버튼 누르면 buy_info에 넣음\n",
+    "    # 넣는 것 성공하면 return 1 else 0\n",
+    "    def add_purchase(self, al_id):\n",
+    "        date = str(self.now.year) + '.' + str(self.now.month) + '.' + str(self.now.day) \n",
+    "        query = \"insert into buy_info values(?, ?, ?)\"\n",
+    "        data = (al_id, self.c_id, date)\n",
+    "        try:\n",
+    "            self.cursor.execute(query, data)\n",
+    "            self.conn.commit()\n",
+    "            return 1\n",
+    "        except:\n",
+    "            return 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
